# math-distill-equational-stage2

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SCOREBOARD.md  pyproject.toml
members/wubing/: .dockerignore  .gitignore  AGENTS.md  BLUEPRINT.md  CLAUDE.md  README.md  pyproject.toml  solver.py
members/wubing/docker/judge-v2-worker/: Dockerfile  README.md
members/wubing/docker/lean4-executor/: Dockerfile
members/wubing/docker/official-stage2-judge/: Dockerfile
members/wubing/docs/: README.md  architecture-overview.md  architecture.md  cheatsheet-optimization.md  competition-analysis.md  data-inventory.md  judge-v2-api.md  request.json  sources.md
members/wubing/docs/blog/: 2026-05-25-codex-goal-math-search.md  README.md
members/wubing/docs/experiments/: 2026-04-29-countermodel-lean-certificates-mvp.md  2026-04-29-countermodel-search-mvp.md  2026-04-29-public-eval-harness-mvp.md  2026-04-29-public-eval-with-order2-countermodels.md  2026-04-29-verified-counterexample-index.md  2026-04-30-cheatsheet-v2-mini.md  2026-04-30-cheatsheet-v3-mini.md  2026-05-07-opnorm-sample200-baseline.md  2026-05-08-v4-offline-explore-remaining-true.md  2026-05-08-v8-next-proof-seed-scan.md  2026-05-11-d3-proofbank-pattern-cluster.md  2026-05-11-eq2118-singleton-proof-seed.md  2026-05-11-eq2921-vampire-singleton-proof-seed.md  2026-05-11-gpt-true-certificate-bank-mvp.md  2026-05-18-order5-residual-cluster-analysis.md  README.md  (+20 more)
members/wubing/experiments/: README.md
members/wubing/scripts/: README.md  __init__.py
(+373 files in other folders)
